# omnyssh

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  install.sh
.ai-chats/: INDEX.md
.aichats/2026-06-04-01-fork-repository-setup/: Opus-4.6--00.md
.github/workflows/: ci.yml  release.yml
aichats/: README.md
crates/omnyssh/: Cargo.toml
crates/omnyssh-core/: Cargo.toml
crates/omnyssh-core/src/: lib.rs
crates/omnyssh-core/src/config/: app_config.rs
crates/omnyssh-core/src/ssh/: pty.rs
crates/omnyssh-gui/: Cargo.toml  tauri.conf.json
crates/omnyssh-gui/capabilities/: default.json
crates/omnyssh-gui/icons/: icon.icns
crates/omnyssh-gui/src/: bridge.rs  dto.rs  error.rs  events.rs  main.rs  state.rs
crates/omnyssh-gui/src/commands/: hosts.rs  keysetup.rs  mod.rs  sftp.rs  snippets.rs  terminal.rs  update.rs
crates/omnyssh-gui/ui/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts  vite.config.ts  vitest.config.ts
crates/omnyssh-gui/ui/e2e/: hosts.spec.ts  keysetup.spec.ts  palette.spec.ts  settings.spec.ts  sftp.spec.ts  sidebar.spec.ts  snippets.spec.ts  terminal.spec.ts
crates/omnyssh-gui/ui/src/: app.css  app.html
crates/omnyssh-gui/ui/src/lib/: bindings.ts
crates/omnyssh-gui/ui/src/lib/components/: AppShell.svelte  CommandPalette.svelte  Logo.svelte  Modal.svelte  Sidebar.svelte  StatusBar.svelte  SupportModal.svelte  ThemeToggle.svelte  UpdateBanner.svelte
crates/omnyssh-gui/ui/src/lib/ipc/: commands.ts  openExternal.ts  router.test.ts  router.ts  subscribe.test.ts  subscribe.ts
crates/omnyssh-gui/ui/src/lib/screens/: Dashboard.svelte  HostEditor.svelte  KeySetupProgress.svelte  Settings.svelte  SftpPane.svelte  SftpView.svelte  SnippetEditor.svelte  SnippetResults.svelte  SnippetRunner.svelte  Snippets.svelte  TerminalView.svelte  hostForm.test.ts  hostForm.ts  serverCard.test.ts  serverCard.ts  snippetForm.test.ts  snippetForm.ts  terminalFade.test.ts  terminalFade.ts  terminalInput.test.ts  terminalInput.ts
crates/omnyssh-gui/ui/src/lib/stores/: activeEntity.test.ts  activeEntity.ts  hostSummary.test.ts  hostSummary.ts  hosts.ts  keySetup.test.ts  keySetup.ts  metrics.ts  navigation.test.ts  navigation.ts  notifications.test.ts  notifications.ts  palette.test.ts  palette.ts  services.ts  sessions.test.ts  sessions.ts  settings.test.ts  settings.ts  sftp.test.ts  sftp.ts  snippets.test.ts  snippets.ts  statuses.ts  streamer.test.ts  streamer.ts  support.test.ts  support.ts  theme.persistence.test.ts  theme.test.ts  theme.ts  ui.test.ts  ui.ts  update.test.ts  update.ts
crates/omnyssh-gui/ui/src/lib/theme/: Button.svelte  Chip.svelte  Icon.svelte  StatusDot.svelte  Surface.svelte  icons.ts  index.ts  no-hardcoded-hex.test.ts  status.test.ts  status.ts  terminalTheme.test.ts  terminalTheme.ts
crates/omnyssh-gui/ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
crates/omnyssh/src/: event.rs  keybindings.rs  lib.rs  main.rs  term_input.rs
crates/omnyssh/src/app/: actions.rs  file_manager.rs  host.rs  mod.rs  snippets.rs  terminal.rs  update.rs
crates/omnyssh/src/config/: app_config.rs  mod.rs  snippets.rs
crates/omnyssh/src/ssh/: pty.rs
crates/omnyssh/src/ui/: popup.rs  terminal.rs
doc/: omny.1
scripts/: hygiene-guard.sh  hygiene-guard.test.sh
src/: app.rs  cli.rs  event.rs  main.rs
src/app/: file_manager.rs  host.rs  mod.rs  snippets.rs
src/config/: app_config.rs
src/ssh/: askpass.rs  key_setup.rs  metrics.rs  mod.rs  pool.rs  pty.rs  session.rs  sftp.rs
src/ssh/services/: docker.rs
src/ui/: card.rs  detail_view.rs
src/utils/: paste.rs
tests/: askpass.rs
