[package]
name = "omnyssh-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OmnySSH Desktop — native GUI for the OmnySSH engine"
publish = false

[[bin]]
name = "omnyssh-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
omnyssh-core = { path = "../omnyssh-core" }
serde = { workspace = true }
tokio = { workspace = true }
# tauri-specta v2 + specta v2 are release candidates (tech-gui.md §3.3): pin exact
# rc versions. rc.21 is the last combo docs.rs builds; upgrades need re-verification.
specta = { version = "=2.0.0-rc.22", features = ["derive", "function"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
