[package]
name = "omnyssh-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OmnySSH Desktop — native GUI for the OmnySSH engine"
publish = false

[[bin]]
name = "omnyssh-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The `specta` feature makes `tauri::ipc::Channel` a `specta::Type`, so the terminal
# stream channel (§3.3/§3.6) exports through tauri-specta like any other DTO.
tauri = { version = "2", features = ["specta"] }
omnyssh-core = { path = "../omnyssh-core" }
serde = { workspace = true }
tokio = { workspace = true }
# tauri-specta v2 + specta v2 are release candidates (tech-gui.md §3.3): pin exact
# rc versions. rc.21 is the last combo docs.rs builds; upgrades need re-verification.
specta = { version = "=2.0.0-rc.22", features = ["derive", "function"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-store = "2.4.3"

[dev-dependencies]
# Asserts the wire form of DTOs (e.g. HostDto never carries a password).
serde_json = "1"
# Property-based coverage of snippet param substitution (tech-gui.md §6.4, §7 Stage 2.2).
proptest = "1"
