[package]
name = "omnyssh-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OmnySSH Desktop — native GUI for the OmnySSH engine"
publish = false

# Named "OmnySSH" (not lowercased) so `cargo tauri dev` — which runs this cargo binary
# directly, not a bundle — shows "OmnySSH" as the app name (e.g. the macOS menu bar),
# matching productName. Still distinct from the `omny` TUI binary.
[[bin]]
name = "OmnySSH"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The `specta` feature makes `tauri::ipc::Channel` a `specta::Type`, so the terminal
# stream channel (§3.3/§3.6) exports through tauri-specta like any other DTO.
tauri = { version = "2", features = ["specta"] }
omnyssh-core = { path = "../omnyssh-core" }
serde = { workspace = true }
tokio = { workspace = true }
# Timestamps the key-setup completion write onto the host, matching the TUI's
# `key_setup_date` so both frontends round-trip the same shared hosts.toml (§4.2).
chrono = { workspace = true }
# tauri-specta v2 + specta v2 are release candidates (tech-gui.md §3.3): pin exact
# rc versions. rc.21 is the last combo docs.rs builds; upgrades need re-verification.
specta = { version = "=2.0.0-rc.22", features = ["derive", "function"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-store = "2.4.3"
# Desktop self-update (tech-gui.md §4.3/§3.7). Endpoints + signing key are configured in
# Stage 5; the plugin is wired here so `install_update` targets it, never the core's TUI
# self-replace.
tauri-plugin-updater = "2"
# Opens external URLs (the GitHub repo + Telegram channel from the support dialog) in
# the user's default browser; the webview itself must never navigate away from the app.
tauri-plugin-opener = "2"
# `generate_context!` embeds the `plugins.updater` config and expands to serde_json at
# runtime; also asserts the wire form of DTOs in tests (e.g. HostDto never carries a password).
serde_json = "1"

[dev-dependencies]
# Property-based coverage of snippet param substitution (tech-gui.md §6.4, §7 Stage 2.2).
proptest = "1"
